--- a/web/static/assets/css/templatemo-plot-listing.css
+++ b/web/static/assets/css/templatemo-plot-listing.css
@@ -828,6 +828,13 @@ Banner Style
   overflow: hidden;
 }
 
+.container .row .navigate {
+  font-family: Microsoft JhengHei;
+  font-weight: 800;
+  font-size: 4rem;
+  color: rgb(255, 163, 224);
+}
+
 #gotop {
   position: fixed;
   z-index: 90;
