--- a/web/templates/parts/_header.html
+++ b/web/templates/parts/_header.html
@@ -10,7 +10,7 @@
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/arange">Aranging</a></li>
+                        <li><a href="/arange">Arranging</a></li>
                         <!-- <li><a href="listing.html">Listing</a></li>
                         <li><a href="contact.html">Contact Us</a></li> -->
                         <li>
