--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -59,7 +59,7 @@
           </div>
 
           <div class="offset-xl-4">
-            <a href="/arange" class="fa-brands fa-golang fa-10x fa-shake" style="color: white;"><span
+            <a href="/arrange" class="fa-brands fa-golang fa-10x fa-shake" style="color: white;"><span
                 class="label"></span></a>
           </div>
         </div>
@@ -280,7 +280,8 @@
                                           <param name='display_count' value='yes' />
                                           <param name='language' value='zh-TW' />
                                           <param name='filter' value='publish=yes' />
-                                        </object></div>
+                                        </object>
+                                      </div>
                                       <script
                                         type='text/javascript'>                    var divElement = document.getElementById('viz1672309678463'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1777px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
