--- a/web/templates/parts/_footer.html
+++ b/web/templates/parts/_footer.html
@@ -4,10 +4,21 @@
             <div class="col-lg-4">
                 <div class="about">
                     <div class="logo">
-                        <img src="{{ url_for('static', filename='assets/images/black-logo.png') }}" alt="Plot Listing">
+                        <img style="max-width: 45%; height: auto;"
+                            src="{{ url_for('static', filename='assets/images/logo-black.png') }}" alt="Plot Listing">
                     </div>
-                    <h5>Data Pipeline Solutions</h5>
-                    <h5>My Brillient Jobs</h5>
+                    <p style="color: rgb(0, 0, 0);
+                    line-height: 30px;
+                    font-size: 25px;
+                    font-weight: 800;
+                    margin-left: 4px;
+                    text-transform: capitalize;">Data Pipeline Solutions</p>
+                    <p style="color: rgb(0, 0, 0);
+                    line-height: 30px;
+                    font-size: 25px;
+                    font-weight: 800;
+                    margin-left: 4px;
+                    text-transform: capitalize;">My Brillient Jobs</p>
                 </div>
             </div>
             <div class="col-lg-4">
