--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -54,8 +54,8 @@
         </div>
         <div style="display: flex;flex-direction: row;">
           <div class="top-text header-text">
-            <h2>Data Pipeline Solutions</h2>
-            <h2>My Brillient Jobs</h2>
+            <h2>Let's Go</h2>
+            <h2>Start the adventures</h2>
           </div>
 
           <div class="offset-xl-4">
@@ -228,9 +228,7 @@
                                 <div class="description">
                                   <div class="row reportcenter">
                                     <div class="col-lg-9">
-
-
-
+                                      <!-- 簡報串接 -->
                                       <div
                                         style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;border-radius: 8px; will-change: transform;">
                                         <iframe loading="lazy"
@@ -239,7 +237,6 @@
                                           allowfullscreen="allowfullscreen" allow="fullscreen">
                                         </iframe>
                                       </div>
-
 
                                     </div>
                                   </div>
@@ -262,20 +259,18 @@
                                 <div class="description">
                                   <div class="row reportcenter">
                                     <div class="col-lg-9">
-
-                                      <div class='tableauPlaceholder' id='viz1672309678463' style='position: relative'>
-                                        <noscript><a href='#'><img alt='各區景點計數 '
-                                              src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2_&#47;2_16723096445890&#47;sheet46&#47;1_rss.png'
+                                      <!-- 儀錶板串接 -->
+                                      <div class='tableauPlaceholder' id='viz1672903613483' style='position: relative'>
+                                        <noscript><a href='#'><img alt='儀表板窗格 14 '
+                                              src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;X9&#47;X9KTQNYTH&#47;1_rss.png'
                                               style='border: none' /></a></noscript><object class='tableauViz'
                                           style='display:none;'>
                                           <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
                                           <param name='embed_code_version' value='3' />
-                                          <param name='site_root' value='' />
-                                          <param name='name' value='2_16723096445890&#47;sheet46' />
-                                          <param name='tabs' value='no' />
+                                          <param name='path' value='shared&#47;X9KTQNYTH' />
                                           <param name='toolbar' value='yes' />
-                                          <param name='staticimage'
-                                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2&#47;2_16723096445890&#47;sheet46&#47;1.png' />
+                                          <param name='static_image'
+                                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;X9&#47;X9KTQNYTH&#47;1.png' />
                                           <param name='animate_transition' value='yes' />
                                           <param name='display_static_image' value='yes' />
                                           <param name='display_spinner' value='yes' />
@@ -286,7 +281,32 @@
                                         </object>
                                       </div>
                                       <script
-                                        type='text/javascript'>                    var divElement = document.getElementById('viz1672309678463'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1777px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+                                        type='text/javascript'>                    var divElement = document.getElementById('viz1672903613483'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '877px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+                                      <div class='tableauPlaceholder' id='viz1672903773322' style='position: relative'>
+                                        <noscript><a href='#'><img alt='餐廳分布圖new '
+                                              src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2_&#47;2_16723096445890&#47;new_1&#47;1_rss.png'
+                                              style='border: none' /></a></noscript><object class='tableauViz'
+                                          style='display:none;'>
+                                          <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                                          <param name='embed_code_version' value='3' />
+                                          <param name='site_root' value='' />
+                                          <param name='name' value='2_16723096445890&#47;new_1' />
+                                          <param name='tabs' value='no' />
+                                          <param name='toolbar' value='yes' />
+                                          <param name='staticimage'
+                                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2&#47;2_16723096445890&#47;new_1&#47;1.png' />
+                                          <param name='animate_transition' value='yes' />
+                                          <param name='display_static_image' value='yes' />
+                                          <param name='display_spinner' value='yes' />
+                                          <param name='display_overlay' value='yes' />
+                                          <param name='display_count' value='yes' />
+                                          <param name='language' value='zh-TW' />
+                                          <param name='filter' value='publish=yes' />
+                                        </object>
+                                      </div>
+                                      <script
+                                        type='text/javascript'>                    var divElement = document.getElementById('viz1672903773322'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1077px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
                                     </div>
                                   </div>
